feat: added OrganizationService.java and updated LocationService.java, CoordinatesService.java and AddressService.java